--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.1",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
